Fix layout on small screens

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -810,3 +810,6 @@ textarea {
     font-size: 17px;
     vertical-align: 3px;
 }
+.responsive-zoom {
+    zoom: 0.9;
+}
